import groovy.xml.XmlParser;

plugins {
    id 'java'
    id 'application'
    id 'checkstyle'
    id 'jacoco'
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
        vendor = JvmVendorSpec.ADOPTIUM
    }
}

repositories {
    maven {
        url("https://maven-central.storage-download.googleapis.com/maven2/")
    }
    mavenCentral()
    mavenLocal()
}

// Resolve dependency conflicts
configurations.all {
    resolutionStrategy {
        force 'com.google.guava:guava:33.0.0-jre'
        eachDependency { details ->
            if (details.requested.group == 'com.google.collections' && details.requested.name == 'google-collections') {
                details.useTarget 'com.google.guava:guava:33.0.0-jre'
                details.because 'google-collections is replaced by guava'
            }
        }
    }
}

dependencies {

    // Fixed Pulumi core dependencies - using stable versions that work together

    implementation 'com.pulumi:pulumi:0.11.0'
    implementation 'com.pulumi:aws:6.52.0'

    // Additional Pulumi core classes that might be needed
    implementation 'com.google.code.gson:gson:2.10.1'
    implementation 'com.google.guava:guava:33.0.0-jre'

    // AWS CDK dependencies
    implementation 'software.amazon.awscdk:aws-cdk-lib:2.204.0'
    implementation 'software.constructs:constructs:10.4.2'

    // Test dependencies
    testImplementation 'org.junit.jupiter:junit-jupiter:5.10.2'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    testImplementation 'org.mockito:mockito-core:5.11.0'
    testImplementation 'org.mockito:mockito-junit-jupiter:5.11.0'

    testImplementation 'com.fasterxml.jackson.core:jackson-databind:2.17.1'

    testImplementation 'org.assertj:assertj-core:3.24.2'
}

application {
    mainClass = 'app.Main'
}

// Override run task to handle path issues
tasks.named('run') {
    standardInput = System.in
    workingDir = projectDir
    systemProperties = System.getProperties()
    environment = System.getenv()
}

// Configure source directories
sourceSets {
    main.java {
        srcDirs = ['src/main/java', 'lib/src/main/java']
    }
    test.java {
        srcDirs = ['tests/unit/java']
    }
    integrationTest {
        java.srcDirs = ['tests/integration/java']
        resources.srcDirs = ['tests/integration/resources']
        compileClasspath += sourceSets.main.output + sourceSets.test.output
        runtimeClasspath += sourceSets.main.output + sourceSets.test.output
    }
}

// Configure integration test configurations after source sets are defined
configurations {
    integrationTestImplementation.extendsFrom testImplementation  
    integrationTestRuntimeOnly.extendsFrom testRuntimeOnly
}

// Integration test dependencies
dependencies {
    integrationTestImplementation 'com.fasterxml.jackson.core:jackson-databind:2.16.1'
    integrationTestImplementation 'com.fasterxml.jackson.core:jackson-core:2.16.1'
    integrationTestImplementation 'software.amazon.awssdk:ec2:2.21.29'
    integrationTestImplementation 'software.amazon.awssdk:core:2.21.29'
}

// Configure JAR with main class for Pulumi
jar {
    manifest {
        attributes(
                'Main-Class': 'app.Main'
        )
    }

    // Create fat JAR with all dependencies
    from {
        configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
    }

    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
    archiveFileName = 'app.jar'
    zip64 = true  // Enable zip64 for large archives
}

// JUnit configuration
test {
    useJUnitPlatform()
    testClassesDirs = sourceSets.test.output.classesDirs
    classpath = sourceSets.test.runtimeClasspath

    // Show test results in console
    testLogging {
        events "passed", "skipped", "failed", "standardOut", "standardError"
        exceptionFormat "full"
        showCauses true
        showExceptions true
        showStackTraces true
    }

    // Always run tests, never use cache
    outputs.upToDateWhen { false }

    finalizedBy jacocoTestReport
}

// Integration test task
tasks.register('integrationTest', Test) {
    description = 'Runs integration tests.'
    group = 'verification'

    testClassesDirs = sourceSets.integrationTest.output.classesDirs
    classpath = sourceSets.integrationTest.runtimeClasspath
    useJUnitPlatform()

    // Show test results in console
    testLogging {
        events "passed", "skipped", "failed", "standardOut", "standardError"
        exceptionFormat "full"
        showCauses true
        showExceptions true
        showStackTraces true
    }

    // Always run tests, never use cache
    outputs.upToDateWhen { false }

    shouldRunAfter test
}

// Checkstyle configuration
checkstyle {
    toolVersion = '10.12.7'
    configFile = file('config/checkstyle/checkstyle.xml')
    ignoreFailures = true
    maxWarnings = 0
}

// JaCoCo configuration
jacoco {
    toolVersion = "0.8.8"
}

jacocoTestReport {
    dependsOn test, integrationTest
    reports {
        xml.required = true
        html.required = true
        csv.required = false
    }

    executionData fileTree(project.buildDir.absolutePath).include("jacoco/*.exec")

    afterEvaluate {
        classDirectories.setFrom(files(classDirectories.files.collect {
            fileTree(dir: it, exclude: [
                    // Exclude main method from coverage (hard to test)
                    '**/Main.class'
            ])
        }))
    }

    finalizedBy jacocoTestCoverageVerification
}

jacocoTestCoverageVerification {
    dependsOn jacocoTestReport
    violationRules {
        rule {
            limit {
                minimum = 0.09
            }
        }
        rule {
            element = 'CLASS'
            limit {
                counter = 'LINE'
                value = 'COVEREDRATIO'
                minimum = 0.09
            }
            // Exclude Main class from coverage requirements (contains main() method)
            excludes = ['app.Main']
        }
    }
}

// Custom task to show coverage summary
tasks.register('showCoverage') {
    dependsOn jacocoTestReport
    doLast {
        def reportFile = file("$buildDir/reports/jacoco/test/html/index.html")
        def xmlReportFile = file("$buildDir/reports/jacoco/test/jacocoTestReport.xml")

        if (xmlReportFile.exists()) {
            // Parse XML to get coverage percentage
            def xml = new XmlParser().parse(xmlReportFile)
            def counter = xml.counter.find { it.'@type' == 'LINE' }
            if (counter) {
                def covered = counter.'@covered'.toInteger()
                def missed = counter.'@missed'.toInteger()
                def total = covered + missed
                def percentage = total > 0 ? (covered * 100 / total).round(1) : 0

                println "\n📊 Code Coverage Summary:"
                println "Lines Covered: ${covered}/${total} (${percentage}%)"
                println "Coverage Status: ${percentage >= 70 ? '✅ PASSED' : '❌ FAILED'} (minimum: 70%)"
            }
        }

        if (reportFile.exists()) {
            println "📄 Detailed HTML Report: file://${reportFile.absolutePath}"
        }
    }
}

// Custom task to run all tests with detailed output
tasks.register('testAll') {
    dependsOn test, integrationTest, showCoverage
    group = 'verification'
    description = 'Runs all tests and displays coverage summary'

    doFirst {
        println "\n🚀 Running all tests with coverage analysis..."
    }
}

// Make check depend on integration tests and coverage
check.dependsOn integrationTest, jacocoTestCoverageVerification
